# filtrage

./: CMakeLists.txt  README.md  main.cpp
include/: filter.h  hpfilter.h  lpfilter.h  manager.h
src/: filter.cpp  hpfilter.cpp  lpfilter.cpp  main.cpp  manager.cpp  meanfilter.cpp  meanfilter.h
